--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ nav button:hover {
   width: calc(33% - 10px);
   transition: transform 0.3s, box-shadow 0.3s;
   text-align: left;
+  cursor: pointer;
 }
 .product:hover {
   transform: translateY(-10px);
@@ -88,6 +89,49 @@ nav button:hover {
 .product p {
   font-size: 14px;
   color: #666;
+}
+
+/* Модальные окна */
+.modal {
+  display: none; /* Скрыто по умолчанию */
+  position: fixed; /* Фиксированное положение */
+  z-index: 1; /* На переднем плане */
+  left: 0;
+  top: 0;
+  width: 100%; /* Полная ширина */
+  height: 100%; /* Полная высота */
+  overflow: auto; /* Включаем прокрутку, если необходимо */
+  background-color: rgba(0, 0, 0, 0.4); /* Черный фон с прозрачностью */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* Вертикальное центрирование */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Ширина окна */
+  max-width: 800px;
+  animation: fadeIn 0.5s;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 
 /* Адаптивность */
